# android-ime-rs

./: Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
.github/workflows/: build.yml
android/: build.gradle.kts  settings.gradle.kts
android-ime/: Cargo.toml
android-ime-test/: Cargo.toml  README.md
android-ime-test/src/: edit_text_widget.rs  lib.rs
android-ime/src/: connection.rs  context.rs  handler.rs  lib.rs
android-ime/src/editable/: helpers.rs  mod.rs
android-ime/src/handler/: mod.rs  registry.rs
android-ime/src/sys/: classes.dex  j2r.rs  mod.rs  r2j.rs
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
android/rust-ime-glue/: build.gradle.kts
android/rust-ime-glue/src/main/java/dev/matrix/rust/ime/glue/: ImeView.java
