[package]
name = "android-ime-test"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
android-ime = { path = "../android-ime" }

jni = "0.21.1"
log = "0.4"
anyhow = "1.0"
winit = "0.30.12"
android_logger = "0.15.1"

[dependencies.eframe]
version = "0.33.3"
default-features = false
features = [
    "default_fonts",
    "glow",
    "android-native-activity",
]

[package.metadata.android]
package = "com.matrix.ime.test"
label = "Android IME Test"
build_targets = ["aarch64-linux-android"]
target_sdk_version = 30
min_sdk_version = 21

[package.metadata.android.signing.release]
path = "debug.keystore"
keystore_password = "android"
key_alias = "androiddebugkey"
key_password = "android"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
